# cecs

./: .gitignore  CMakeLists.txt  cecs.sln  cecs.vcxproj  cecs.vcxproj.filters  main-clang
cecs/: cecs.c  cecs.h
cecs/containers/: cecs_arena.c  cecs_arena.h  cecs_bitset.c  cecs_bitset.h  cecs_displaced_set.c  cecs_displaced_set.h  cecs_dynamic_array.c  cecs_dynamic_array.h  cecs_queue.h  cecs_sparse_set.c  cecs_sparse_set.h
cecs/core/: cecs_relation.h  cecs_system.c  cecs_system.h  cecs_world.c  cecs_world.h
cecs/core/component/: cecs_component.c  cecs_component.h  cecs_component_iterator.h  cecs_component_storage.c  cecs_component_storage.h
cecs/core/component/entity/: cecs_component_type.c  cecs_entity.c
cecs/core/resource/: cecs_resource.c  cecs_resource.h
cecs_core/cecs_core/: cecs_core.c  cecs_core.h
cecs_core/cecs_core/containers/: cecs_arena.c  cecs_arena.h  cecs_bitset.c  cecs_bitset.h  cecs_discard.c  cecs_discard.h  cecs_displaced_set.c  cecs_displaced_set.h  cecs_dynamic_array.c  cecs_dynamic_array.h  cecs_flatmap.c  cecs_flatmap.h  cecs_queue.c  cecs_queue.h  cecs_range.h  cecs_sparse_set.c  cecs_sparse_set.h  cecs_union.h
cecs_core/cecs_core/core/: cecs_relation.c  cecs_relation.h  cecs_system.c  cecs_system.h  cecs_world.c  cecs_world.h
cecs_core/cecs_core/core/component/: cecs_component.c  cecs_component.h  cecs_component_iterator.c  cecs_component_iterator.h  cecs_component_storage.c  cecs_component_storage.h
cecs_core/cecs_core/core/component/entity/: cecs_component_type.c  cecs_component_type.h  cecs_entity.c  cecs_entity.h  cecs_game_component.c  cecs_game_component.h  cecs_tag.h
cecs_core/cecs_core/core/resource/: cecs_resource.c  cecs_resource.h
cecs_core/cecs_core/types/: cecs_macro_utils.h  cecs_type_id.c  cecs_type_id.h
cecs_graphics/cecs_graphics/: cecs_graphics.h
cecs_graphics/cecs_graphics/containers/: cecs_dynamic_wgpu_buffer.c  cecs_dynamic_wgpu_buffer.h
cecs_graphics/cecs_graphics/core/: cecs_graphics_system.c  cecs_graphics_system.h  cecs_graphics_world.c  cecs_graphics_world.h  cecs_mesh_builder.c  cecs_mesh_builder.h  cecs_texture_builder.c  cecs_texture_builder.h
cecs_graphics/cecs_graphics/core/component/: cecs_mesh.c  cecs_mesh.h  cecs_texture.c  cecs_texture.h  cecs_vertex.c  cecs_vertex.h
cecs_graphics/cecs_graphics/core/context/: cecs_graphics_context.c  cecs_graphics_context.h
cecs_graphics/lib/glfw/: cmake_install.cmake
cecs_graphics/lib/glfw/src/: cmake_install.cmake  glfw3.pc
cecs_graphics/lib/webgpu/: cmake_install.cmake
cecs_math/cecs_math/: cecs_math.c  cecs_math.h
cecs_math/cecs_math/arithmetic/: cecs_integer_arithmetic.c  cecs_integer_arithmetic.h
cecs_math/cecs_math/relations/: cecs_ordering.c  cecs_ordering.h
examples/app/lib/: cecs.lib
examples/app/src/: color.h  main.c
examples/graphics_app/src/: dump.spv  dump.spvasm  main.c  test_pass.c  test_pass.h  test_pass.wgsl
include/: arena.h  cecs_lib.c  component.h  entity.h  lib.c  lib.h  list.h  map.h  query.h  resource.h  type_id.h  view.h  world.h
include/containers/: arena.c  arena.h  bitset.c  bitset.h  cecs_arena.c  cecs_arena.h  cecs_bitset.c  cecs_bitset.h  cecs_dynamic_array.h  cecs_queue.c  cecs_range.h  cecs_sparse_set.c  cecs_sparse_set.h  cecs_union.h  displaced_set.c  displaced_set.h  list.c  list.h  queue.c  queue.h  range.h  sparse_set.c  sparse_set.h  tagged_union.h
include/core/: arena.h  cecs_relation.c  cecs_system.c  cecs_system.h  component.h  entity.h  list.h  query.h  query_context.h  relation.c  relation.h  resource.h  system.c  system.h  tag.h  type_id.h  world.c  world.h
include/core/component/: cecs_component.c  cecs_component.h  cecs_component_iterator.c  cecs_component_storage.c  cecs_component_storage.h  component.c  component.h  component_iterator.c  component_iterator.h  component_storage.c  component_storage.h  component_type.h
include/core/component/entity/: cecs_component_type.h  cecs_entity.c  cecs_entity.h  cecs_game_component.h  cecs_tag.h  component_type.c  component_type.h  entity.c  entity.h  game_component.h  tag.h
include/core/query/: query.h  query_context.h
include/core/resource/: resource.c  resource.h
include/types/: cecs_macro_utils.h  macro_utils.h  type_id.c  type_id.h  wide_ptr.h
src/: main.c  main_v0.1.c  main_v0.2.c
